--- a/product-3.html
+++ b/product-3.html
@@ -111,7 +111,6 @@
             <div style="margin-top: 50px; " class="h2Container-läsmer">
               <div class="h2TextContainer">
                 <button id="myBtn" class="h2TextBlock h2TextBlock-läsmer">KÖP</button>
-
                 <!-- <a href="about.html#blåmärksfrukt">
                   <h2 style="font-size: 20px; width: 200px;" class="h2TextBlock h2TextBlock-läsmer">KÖP</h2>
                 </a> -->
@@ -122,7 +121,107 @@
       </div>
     </div>
   </div>
+  <!-- The modal -->
+  <div id="myModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2 style="font-size: 22px;">Hur köper jag?</h2>
+      <h3 style="font-size: 20px; text-align: center;">Steg 1</h3>
+      <p style="font-size: 15px;">För att komma igång med din beställning kan du antingen fylla i formuläret nedan <br> och skicka till oss. Det går också bra att göra en beställning via Instagram DM där du besvarar samma frågor. </p>
 
+      <div style="margin: auto; padding: 30px;" class="">
+        <form style="margin: auto;" action="mailto:info.itsamust@gmail.com?subject=Beställning&body=Vänligen" method="post" enctype="text/plain">
+          <div class="form-row">
+            <div class="form-group col-md-4">
+              <input type="text" name="Namn" class="form-control" id="inputEmail4" placeholder="Namn" required>
+            </div>
+            <div class="form-group col-md-4">
+              <input type="email" name="E-post" class="form-control" id="inputEmail4" placeholder="E-post" required>
+            </div>
+            <div class="form-group col-md-4">
+              <input type="number" name="Telefonnummer" class="form-control" id="inputEmail4" placeholder="Telefonnummer" required>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <input type="text" name="Adress" class="form-control" placeholder="Adress" required>
+            </div>
+            <div class="form-group col-md-3">
+              <input type="text" name="Postnummer" class="form-control" placeholder="Postnummer" required>
+            </div>
+            <div class="form-group col-md-3">
+              <input type="text" name="Postadress" class="form-control" placeholder="Postadress" required>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-4">
+              <select id="inputState" name="Leveranssatt" class="form-control" required>
+                <option selected>Leveranssätt...</option>
+                <option>Hemleverans : 20-50kr</option>
+                <option>Leverans PostNord : 79kr</option>
+              </select>
+            </div>
+            <div class="form-group col-md-4">
+              <select id="inputState" name="Produkt" class="form-control" required>
+                <option selected>Välj produkt...</option>
+                <option>Äppelmust Original : 29kr</option>
+                <option disabled>Äpplemust Limited Edition : 29kr - SLUT</option>
+                <option disabled>Äpplemust Bag-in-Box : 125kr - SLUT</option>
+              </select>
+            </div>
+            <div class="form-group col-md-4">
+              <input type="number" name="Antal" class="form-control" placeholder="Antal" required>
+            </div>
+            <div class="form-group col-md-12">
+              <input type="text" name="Meddelande" class="form-control" placeholder="Meddelande">
+            </div>
+          </div>
+          <button style="margin: auto; width: 100%;" type="submit" class="btn btn-danger" value="Send">Skicka</button>
+        </form>
+      </div>
+      <h3 style="font-size: 20px; text-align: center;">Steg 2</h3>
+      <p style="font-size: 15px;">Vi behandlar just nu din beställning. Detta kan ta upp till 24h. Vi skickar en orderbekräftelse till dig när vi hanterat din order. <br>Vid frågor så hör av dig via Instagram eller mejl.</p>
+
+
+      <!-- <ul class="ul-footer">
+        <li id="foot-item-2" class="li-footer">
+          <a class="a-footer" href="https://www.instagram.com/itsamust.uf/" target="_blank">
+            <span style="color:black; background: black;" class="span-footer"></span>
+            <span style="color:black; background: black;" class="span-footer"></span>
+            <span style="color:black; background: black;" class="span-footer"></span>
+            <span style="color:black; background: black;" class="span-footer"></span>
+            <i style="color:black;"  class="fab fa-instagram" aria-hidden="true"></i>
+          </a>
+        </li>
+      </ul> -->
+
+
+
+
+
+
+
+
+
+
+      <!-- <div class="row">
+        <div class="col-sm-12 text-center">
+          <a id="btnSearch" class="btn btn-danger btn-md center-block" style="width: 100px; margin-right: 10px;" href="mailto: info.itsamust@gmail.com?subject=Beställning&body=Hej! Jag skulle vilja lägga en beställning!">MEJL</a>
+          <a id="btnSearch" class="btn btn-danger btn-md center-block" style="width: 100px;" href="https://www.instagram.com/itsamust.uf/" target="_blank">INSTAGRAM</a>
+        </div>
+      </div>
+
+      <p>För tillfället går det endast att beställa via Instagram DM och mejl.</p>
+      <p>Vänligen notera att det kan ta upp till 24h för oss att genomföra din order. </p>
+      <p style="color: black;"><a class="media-link" style="text-decoration: none; color: black;" href="mailto: info.itsamust@gmail.com?subject=Beställning&body=Hej! Jag skulle vilja lägga en beställning! ">E-post:<b> itsamust.uf@gmail.com</a></b>&nbsp;/&nbsp;<a style="text-decoration: none; color: black;" href="https://www.instagram.com/itsamust.uf/" target="_blank">Instagram: <b>@itsamust.uf</b></a></p>
+      <h2>Leverans</h2>
+      <p>Vad gäller leverans tar vi en avgift bereonde på vart du bor. </p> -->
+
+
+    </div>
+
+  </div>
   <div class="skew-cc"></div>
   <div class="footer">
     <ul class="ul-footer">
