--- a/product-1.html
+++ b/product-1.html
@@ -149,7 +149,7 @@
               <input type="text" name="Adress" class="form-control" placeholder="Adress" required>
             </div>
             <div class="form-group col-md-3">
-              <input type="number" name="Postnummer" class="form-control" placeholder="Postnummer" required>
+              <input type="tel" name="Postnummer" class="form-control" placeholder="Postnummer" required>
             </div>
             <div class="form-group col-md-3">
               <input type="text" name="Postadress" class="form-control" placeholder="Postadress" required>
@@ -172,7 +172,7 @@
               </select>
             </div>
             <div class="form-group col-md-4">
-              <input type="number" name="Antal" class="form-control" placeholder="Antal" required>
+              <input type="tel" name="Antal" class="form-control" placeholder="Antal" required>
             </div>
             <div class="form-group col-md-12">
               <input type="text" name="Meddelande" class="form-control" placeholder="Meddelande">
