--- a/product-1.html
+++ b/product-1.html
@@ -132,7 +132,7 @@
       <p style="font-size: 15px;">För att komma igång med din beställning kan du antingen fylla i formuläret nedan <br> och skicka till oss. Det går också bra att göra en beställning via Instagram DM där du besvarar samma frågor. </p>
 
       <div style="margin: auto; padding: 30px;" class="">
-        <form style="margin: auto;" action="mailto:info.itsamust@gmail.com?subject=Beställning&body=Vänligen" method="post" enctype="text/plain">
+        <form style="margin: auto;" action="mailto:info.itsamust@gmail.com?subject=Order" method="post" enctype="text/plain">
           <div class="form-row">
             <div class="form-group col-md-4">
               <input type="text" name="Namn" class="form-control" id="inputEmail4" placeholder="Namn" required>
@@ -182,7 +182,7 @@
         </form>
       </div>
       <h3 style="font-size: 20px; text-align: center;">Steg 2</h3>
-      <p style="font-size: 15px;">Vi behandlar just nu din beställning. Detta kan ta upp till 24h. Vi skickar en orderbekräftelse till dig när vi hanterat din order. <br>Har du inte fått en orderbekräftelse inom 24h så hör av dig till oss via mejl eller Instagram. Vid andra frågor tveka inte att höra av dig.</p>
+      <p style="font-size: 15px;">Vi behandlar just nu din beställning. Detta kan ta upp till 24h. Vi skickar en orderbekräftelse till dig när vi hanterat din order. <br>Har du inte fått en orderbekräftelse inom 24h så hör av dig till oss via mejl eller Instagram. Vid andra frågor tveka inte att höra av dig.<br> För tillfället upplever vi problem med vår beställningstjänst. Om ingenting kommer upp när du klickat på skicka, prova igen senare eller lägg en manuell beställning via mejl eller Instagram. Vi ber innerligt om ursäkt för detta.</p>
       <div style="margin-top: 20px; padding-bottom: 0px;" class="modal-footer">
         <header style="margin:auto;" class="masthead mt-auto">
           <div class="inner">
