--- a/product-2.html
+++ b/product-2.html
@@ -140,7 +140,7 @@
               <input type="email" name="E-post" class="form-control" id="inputEmail4" placeholder="E-post" required>
             </div>
             <div class="form-group col-md-4">
-              <input type="number" name="Telefonnummer" class="form-control" id="inputEmail4" placeholder="Telefonnummer" required>
+              <input type="tel" name="Telefonnummer" class="form-control" id="inputEmail4" placeholder="Telefonnummer" required>
             </div>
           </div>
           <div class="form-row">
@@ -148,7 +148,7 @@
               <input type="text" name="Adress" class="form-control" placeholder="Adress" required>
             </div>
             <div class="form-group col-md-3">
-              <input type="text" name="Postnummer" class="form-control" placeholder="Postnummer" required>
+              <input type="tel" name="Postnummer" class="form-control" placeholder="Postnummer" required>
             </div>
             <div class="form-group col-md-3">
               <input type="text" name="Postadress" class="form-control" placeholder="Postadress" required>
@@ -171,7 +171,7 @@
               </select>
             </div>
             <div class="form-group col-md-4">
-              <input type="number" name="Antal" class="form-control" placeholder="Antal" required>
+              <input type="tel" name="Antal" class="form-control" placeholder="Antal" required>
             </div>
             <div class="form-group col-md-12">
               <input type="text" name="Meddelande" class="form-control" placeholder="Meddelande">
@@ -181,8 +181,21 @@
         </form>
       </div>
       <h3 style="font-size: 20px; text-align: center;">Steg 2</h3>
-      <p style="font-size: 15px;">Vi behandlar just nu din beställning. Detta kan ta upp till 24h. Vi skickar en orderbekräftelse till dig när vi hanterat din order. <br>Vid frågor så hör av dig via Instagram eller mejl.</p>
+      <p style="font-size: 15px;">Vi behandlar just nu din beställning. Detta kan ta upp till 24h. Vi skickar en orderbekräftelse till dig när vi hanterat din order. <br>Har du inte fått en orderbekräftelse inom 24h så hör av dig till oss via mejl eller Instagram. Vid andra frågor tveka inte att höra av dig.<br> För tillfället upplever vi problem med vår beställningstjänst. Om ingenting kommer upp när du klickat på skicka, prova igen senare eller lägg en manuell beställning via mejl eller Instagram. Vi ber innerligt om ursäkt för detta.</p>
+      <div style="margin-top: 20px; padding-bottom: 0px;" class="modal-footer">
+        <header style="margin:auto;" class="masthead mt-auto">
+          <div class="inner">
+            <nav style="margin-top:20px" class="nav nav-masthead justify-content-center">
+              <p style="font-size: 15px; padding-top:10px;" class="text-secondary nav-link active"><b>E-post:</b> info.itsamust@gmail.com</p>
+              <p style="padding-top:7px;" class="text-secondary nav-link"><b>/</b></p>
+              <p style="font-size: 15px; margin-bottom:0px;" class="text-secondary nav-link "><b>Instagram: </b>@itsamust.uf</p>
+              <!-- <img style="height: 35px; width: auto; " class="logo" src="images/logotyp-D4.png" alt="site-logo"> -->
 
+            </nav>
+          </div>
+        </header>
+        <!-- <p style="font-size: 15px; left:0;padding-top:7px;"><b>E-post:</b> info.itsamust@gmail.com &#9;&#9;<b>/</b>&#9;&#9; <b>Instagram: </b>@itsamust.uf</p> -->
+      </div>
 
       <!-- <ul class="ul-footer">
         <li id="foot-item-2" class="li-footer">
