--- a/product-3.html
+++ b/product-3.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="A8itWuP6BMggBQ-0Z126wg8YDbmjjRO_fsLyDH8pk6w" />
   <title>it's a must.</title>
   <link rel="icon" href="icons/favicon (1).ico">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
