--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="A8itWuP6BMggBQ-0Z126wg8YDbmjjRO_fsLyDH8pk6w" />
+  <meta name="keywords" content="itsamust, its, it, s, a, must, se, .se, must, god, frisk, must, hemgjord, hem, gjord, must, äppelmust, äpplekanel, bag in box, bag-in-box, bib, flaska, glasflaska, must, itsamust.se" />
+  <meta name="description" content="Välkommen till IT'S A MUST UF. Vi säljer god och frisk must." />
   <title>it's a must.</title>
   <link rel="icon" href="icons/favicon (1).ico">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
