--- a/product-1.html
+++ b/product-1.html
@@ -108,7 +108,7 @@
             <p style="font-size: 15px;">Du kan dricka denna underbart goda must med mycket gott samvete med kunskapen om att du hjälper till att minska fruktsvinnet.</p>
             <br>
             <p><b>Pris:</b> 29kr</p>
-            <p style="color: green;">50+ finns i lager</p>
+            <p style="color: red;">Slut i lager</p>
             <div style="margin-top: 50px; " class="h2Container-läsmer">
               <div class="h2TextContainer">
                 <button id="myBtn" class="h2TextBlock h2TextBlock-läsmer">KÖP</button>
