--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <!-- <svg class="text-center svgimg bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
         <h2>Äppelmust</h2>
         <h3>Originalet</h3>
-        <h3 style="font-size: 15px; color: green;">50+ finns i lager</h3>
+        <h3 style="font-size: 15px; color: red;">SLUTSÅLD</h3>
         <p>Musten producerar vi själva, på handplockade vildvuxna äpplen från Sveriges trädgårdar som vi sedan försluter i glasflaskor på trettiotre centiliter.</p>
         <p><a class="merInfoBtn-produkt btn btn-danger" href="product-1.html" role="button">Mer information &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
